# nanoeval

./: .gitignore  Cargo.toml  HARNESS_PLACEMENT.md  KVM_SANDBOX_LANDSCAPE.md  LICENSE-MIT  NANOCODEX_VM_TOOLS.md  PLAN.md  README.md  deny.toml  justfile  nanoeval.entitlements
.cargo/: config.toml
.github/workflows/: ci.yml
crates/nanocodex-vm/: Cargo.toml
crates/nanocodex-vm/src/: lib.rs  protocol.rs  session.rs
crates/nanoeval/: Cargo.toml
crates/nanoeval-harbor/: Cargo.toml
crates/nanoeval-harbor/src/: checksum.rs  lib.rs  published.rs
crates/nanoeval/src/: atif.rs  evaluator.rs  event.rs  harbor.rs  harbor_checksum.rs  job.rs  lib.rs  native.rs  plan.rs  result.rs  run.rs  sweep.rs  task.rs
crates/nanovm/: Cargo.toml
crates/nanovm/src/: capabilities.rs  command.rs  config.rs  krun.rs  lib.rs
examples/: Cargo.toml
scripts/: aarch64-unknown-linux-musl-ar  aarch64-unknown-linux-musl-linker  codesign-runner
tasks/extract-todos/: instruction.md  task.toml
tasks/extract-todos/environment/: Dockerfile  notes.md
tasks/extract-todos/tests/: test.sh
tasks/uppercase-message/: instruction.md  task.toml
tasks/uppercase-message/environment/: Dockerfile  message.txt
tasks/uppercase-message/tests/: test.sh
tasks/write-greeting/: instruction.md  task.toml
tasks/write-greeting/environment/: Dockerfile  README.md
tasks/write-greeting/tests/: test.sh
