[workspace]
members = ["bin/nanoeval", "crates/nanocodex-vm", "crates/nanoeval", "crates/nanoeval-harbor", "crates/nanovm", "examples"]
default-members = ["bin/nanoeval"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Nanoeval Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/gakonst/nanoeval"
repository = "https://github.com/gakonst/nanoeval"
readme = "README.md"
keywords = ["agents", "evaluation", "virtualization", "terminal-bench"]
categories = ["development-tools", "virtualization"]
publish = true

[workspace.dependencies]
arcbox-ext4 = "0.1.2"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
eyre = "0.6"
futures-util = "0.3.31"
fs2 = "0.4"
flate2 = "1.1"
ignore = "0.4.31"
krun = { package = "libkrun", git = "https://github.com/containers/libkrun", branch = "main", features = ["blk", "net"] }
nanocodex = { version = "0.1.0", git = "https://github.com/gakonst/nanocodex", rev = "f1b4f8bcfae7c0b59a766bbd871ce143559f5740" }
nanocodex-observability = { version = "0.1.0", git = "https://github.com/gakonst/nanocodex", rev = "f1b4f8bcfae7c0b59a766bbd871ce143559f5740" }
nanocodex-tools = { version = "0.1.0", git = "https://github.com/gakonst/nanocodex", rev = "f1b4f8bcfae7c0b59a766bbd871ce143559f5740", default-features = false }
nanocodex-vm = { version = "0.1.0", path = "crates/nanocodex-vm" }
nanoeval = { version = "0.1.0", path = "crates/nanoeval" }
nanoeval-harbor = { version = "0.1.0", path = "crates/nanoeval-harbor" }
nanovm = { version = "0.1.0", path = "crates/nanovm" }
oci-client = { version = "0.17.0", default-features = false, features = ["rustls-tls"] }
reflink-copy = "0.1.30"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sha2 = "0.10.9"
tempfile = "3.20"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }
yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
zstd = "0.13"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.dev]
# Keep line tables/backtraces without paying to link full variable debug info
# on every harness iteration.
debug = "limited"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16
