[package]
name = "nanoeval-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Public Nanoeval and NanoVM library examples"

[dependencies]
nanocodex.workspace = true
nanocodex-vm.workspace = true
nanoeval.workspace = true
nanoeval-harbor.workspace = true
nanovm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "load-task"
path = "src/bin/load_task.rs"

[[bin]]
name = "run-vm"
path = "src/bin/run_vm.rs"

[[bin]]
name = "native-task"
path = "src/bin/native_task.rs"

[[bin]]
name = "harbor-task"
path = "src/bin/harbor_task.rs"

[[bin]]
name = "native-suite"
path = "src/bin/native_suite.rs"

[[bin]]
name = "thinking-sweep"
path = "src/bin/thinking_sweep.rs"

[[bin]]
name = "tool-sweep"
path = "src/bin/tool_sweep.rs"

[[bin]]
name = "vm-tools"
path = "src/bin/vm_tools.rs"

[lints]
workspace = true
