[package]
name = "nanocodex-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "VM-owned standard workspace tools for Nanocodex"

[dependencies]
async-trait = "0.1.89"
nanocodex-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util"] }

[dev-dependencies]

[lints]
workspace = true
