[package]
name = "nanoeval-harbor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Streaming Harbor and ATIF output for Nanoeval"

[dependencies]
chrono.workspace = true
ignore.workspace = true
nanoeval.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
