[package]
name = "nanoeval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Fast, library-first evaluation for Nanocodex agents"

[dependencies]
chrono.workspace = true
futures-util.workspace = true
fs2.workspace = true
nanocodex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
